# YogaCoach

./: .flake8  .gitignore  BUILD  README.md  format_and_lint.sh  isort.cfg  pants.toml  pyproject.toml
app/: TestsIP.ipynb  UI_yoga_instructor.ipynb  YogaCoach_full text for positions.txt  calibration.py  definitions.py  detection.py  joint.py  main_screen.py  trainee.py  yoga_pose.py
