[tool.poetry]
name = "yogacoach"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
opencv-python = "^4.10.0.84"
numpy = "^2.0.0"
scikit-learn = "^1.5.0"
scikit-image = "^0.24.0"
scipy = "^1.14.0"
flake8 = "^4.0.1"
isort = "^5.10.2"
black = "^22.1.0"
customtkinter = "^5.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.isort]
profile = "black"
line_length = 130

[tool.black]
line-length = 130

[tool.flake8]
max-line-length = 130

[tool.mypy]
warn_unused_configs = true
warn_return_any = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
pretty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"